--- a/server/RideShare-OZ-Server/views/login.jade
+++ b/server/RideShare-OZ-Server/views/login.jade
@@ -7,16 +7,18 @@ html
     script(src='http://code.jquery.com/jquery.js')
     script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
   body
-  .container
-    h1 Login Page
-    p.lead Say something worthwhile here.
-    br
-    form(role='form', action="/login",method="post", style='max-width: 300px;')
-      .form-group
-          input.form-control(type='text', name="username", placeholder='Enter Username')
-      .form-group
-        input.form-control(type='password', name="password", placeholder='Password')
-      button.btn.btn-default(type='submit') Submit
-      &nbsp;
-      a(href='/')
-        button.btn.btn-primary(type="button") Cance
+  .container(style='max-width: 400px;')
+      .row
+          .col-md-4.col-md-offset-4
+            .login-panel.panel.panel-default
+              .panel-heading
+                h3.panel-title Please Sign In
+              |                     
+              .panel-body
+                form(role='form', action="/login",method="post")
+                  fieldset
+                    .form-group
+                      input.form-control(type='text', name="username", placeholder='Enter Username')
+                    .form-group
+                      input.form-control(type='password', name="password", placeholder='Password')
+                    button.btn.btn-lg.btn-success.btn-block(type='submit') Login
