--- a/server/RideShare-OZ-Server/views/login.jade
+++ b/server/RideShare-OZ-Server/views/login.jade
@@ -7,7 +7,7 @@ html
     script(src='http://code.jquery.com/jquery.js')
     script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
   body
-  .container(style='max-width: 400px;')
+  .container(style='max-width: 100%;')
       .row
           .col-md-4.col-md-offset-4
             .login-panel.panel.panel-default
