--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -6,7 +6,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.swen900014.orange.rideshareoz.UserInfoActivity"
+                tools:context="com.swen900014.orange.rideshareoz.views.UserInfoActivity"
              android:gravity="center_vertical|center|center_horizontal"
              android:id="@+id/userInfoTable">
 
