--- a/app/RideShareOZ/app/src/main/res/layout/list_item_rides_linear.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/list_item_rides_linear.xml
@@ -18,7 +18,8 @@
         android:id="@+id/textViewFromTo"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -63,6 +64,6 @@
         android:id="@+id/textViewGroup"
         android:layout_below="@+id/textViewDate"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffa405" />
+        android:textColor="#721c03" />
 
 </RelativeLayout>
