--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -147,6 +147,7 @@
             android:layout_row="4"
             android:layout_column="1"
             android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:style="text-decoration: underline;"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="6"
             android:textColor="#000080"/>
