--- a/server/RideShare-OZ-Server/views/templates/group.jade
+++ b/server/RideShare-OZ-Server/views/templates/group.jade
@@ -19,6 +19,9 @@
                   span() {{group.location}}
                 td
                   span(editable-text='group.introduction', onbeforesave="checkData(4, $data)", onaftersave="update($index)") {{group.introduction}}
+                td(ng-click="deleteGroup($index);",)
+                  span.text-danger(tooltip='Delete')
+                    i.fa.fa-times
       rd-widget-footer
         dir-pagination-controls(boundary-links="true", on-page-change="pageChangeHandler(newPageNumber)", template-url="templates/dirPaginationTpl", pagination-id="group")
         .clearfix
