--- a/server/RideShare-OZ-Server/views/admin.jade
+++ b/server/RideShare-OZ-Server/views/admin.jade
@@ -53,10 +53,10 @@ html(lang='en', ng-app='RDash')
             a(href='#/event')
               | Event
               span.menu-icon.fa.fa-th-list
-          li.sidebar-list
-            a(href='#/user')
-              | User
-              span.menu-icon.fa.fa-user
+          //- li.sidebar-list
+            //- a(href='#/user')
+              //- | User
+              //- span.menu-icon.fa.fa-user
         .sidebar-footer
           .col-xs-4
             a(href='https://github.com/RideShare-OZ-orange/RideShare-OZ-Orange-publish', target='_blank')
