--- a/server/RideShare-OZ-Server/views/templates/group.jade
+++ b/server/RideShare-OZ-Server/views/templates/group.jade
@@ -16,7 +16,7 @@
                 td 
                   span(editable-text='group.group_location[1]', onbeforesave="checkData(3, $data)", onaftersave="update($index)") {{group.group_location[1]}}
                 td
-                  span() {{group.location}}
+                  span(editable-text='group.location', onaftersave="update($index)") {{group.location}}
                 td
                   span(editable-text='group.introduction', onbeforesave="checkData(4, $data)", onaftersave="update($index)") {{group.introduction}}
                 td(ng-click="deleteGroup($index);",)
